Replaces image and changes background color on CustomView

--- a/MiniCursoFinalProject/CustomViews/CustomView.xib
+++ b/MiniCursoFinalProject/CustomViews/CustomView.xib
@@ -28,7 +28,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.96470588239999999" green="0.97254901959999995" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="ZzZ-S1-Kio" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="DS5-xx-dz9"/>
                 <constraint firstItem="ZzZ-S1-Kio" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Fyg-d0-0pA"/>
@@ -36,6 +36,6 @@
         </view>
     </objects>
     <resources>
-        <image name="profile-picture" width="413" height="415"/>
+        <image name="profile-picture" width="399" height="399"/>
     </resources>
 </document>
