--- a/MiniCursoFinalProject/Base.lproj/LaunchScreen.storyboard
+++ b/MiniCursoFinalProject/Base.lproj/LaunchScreen.storyboard
@@ -29,11 +29,11 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mini Curso IFSP" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vit-BC-Ld5">
                                 <rect key="frame" x="16" y="317" width="343" height="33.5"/>
                                 <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="29"/>
-                                <color key="textColor" red="0.49019607840000001" green="0.47843137250000001" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.96470588239999999" green="0.97254901959999995" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.97254901959999995" green="0.59999999999999998" blue="0.61568627450000002" alpha="0.30757705479452052" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.97254901959999995" green="0.59999999999999998" blue="0.61568627450000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="vit-BC-Ld5" secondAttribute="trailing" constant="16" id="99B-Q2-RjO"/>
                             <constraint firstItem="vit-BC-Ld5" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="huS-xc-DGd"/>
