--- a/MiniCursoFinalProject/CustomViews/CustomView.xib
+++ b/MiniCursoFinalProject/CustomViews/CustomView.xib
@@ -13,6 +13,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomView" customModule="MiniCursoFinalProject" customModuleProvider="target">
             <connections>
                 <outlet property="centerImageView" destination="ZzZ-S1-Kio" id="MLq-6p-fqB"/>
+                <outlet property="centerImageViewCenterYConstraint" destination="Fyg-d0-0pA" id="PtC-kA-f0y"/>
+                <outlet property="centerImageViewWidthConstraint" destination="VwC-35-yFK" id="FMa-S2-uM0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
