--- a/MiniCursoFinalProject/Storyboards/CoreData.storyboard
+++ b/MiniCursoFinalProject/Storyboards/CoreData.storyboard
@@ -18,11 +18,26 @@
                         <viewControllerLayoutGuide type="bottom" id="XIY-PF-SQO"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="pjR-a8-EkZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xqk-5g-slt">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xqk-5g-slt" firstAttribute="leading" secondItem="pjR-a8-EkZ" secondAttribute="leading" id="Bhh-di-nqc"/>
+                            <constraint firstItem="xqk-5g-slt" firstAttribute="top" secondItem="j8Z-dz-GYW" secondAttribute="bottom" id="ROG-a6-gVg"/>
+                            <constraint firstAttribute="trailing" secondItem="xqk-5g-slt" secondAttribute="trailing" id="VU9-VP-fQm"/>
+                            <constraint firstItem="XIY-PF-SQO" firstAttribute="top" secondItem="xqk-5g-slt" secondAttribute="bottom" id="nLv-xo-hJw"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="rIV-pC-fid"/>
+                    <connections>
+                        <outlet property="tableView" destination="xqk-5g-slt" id="n5n-kW-o8r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MUl-Zd-Woi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -34,8 +49,9 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oZS-HS-Vrd" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="CoreData" image="storage" id="bSb-DC-wRd"/>
                     <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CdZ-uD-hff">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="CdZ-uD-hff">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
